# Natural-Language-Processing

./: .gitignore  README.md  config.yaml  main.py  pre_analys.py  pyproject.toml  requirements.txt
metric/: base_metrics.py
models/: cnn.py  load.py  neural.py  tfidf.py
